fix(library): fix scrollbar presence

--- a/src/renderer/src/features/library-view/LibraryView.module.scss
+++ b/src/renderer/src/features/library-view/LibraryView.module.scss
@@ -6,3 +6,9 @@
 
    height: 100%;
 }
+
+@media (min-width: 38.5em) {
+   .libraryView {
+      grid-template-rows: 1fr;
+   }
+}
